# esp-firework-firing-system

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yml
cad/: SCH_esp-firework-firing-system-hw1.json  esp-firework-firing-system  esp-firework-firing-system-hw1.1.json
cad/hw1.1/: esp-firework-firing-system-hw1.1.json
cad/hw2.0/: Schematic_esp-firework-firing-system-hw2.0.json
cad/hw2.1/: SCH_esp-firework-firing-system-v2.1.json
doc/: architecture.md  bom.md  building.md  coding-style.md  formula1.md  formula2.md  formula3.md  hardware.md  settings.md  webinterface.md
source/components/SSD1306/: CMakeLists.txt  SSD1306.c  SSD1306.cpp  SSD1306.h  SSD1306.hpp
source/components/SSD1306/fonts/: FreeMono5pt7b.h  FreeMono9pt7b.h  FreeSans9pt7b.h
source/components/fwi-remote-comm/: CMakeLists.txt  FWIHelper.c  FWIHelper.h  fwi-output.h  fwi-remote-comm.c  fwi-remote-comm.h
source/components/nvsjson/: nvsjson.c  nvsjson.h
source/fwi-receiver-fw/: CMakeLists.txt  embeddedgen.bat  sdkconfig  sdkconfig.defaults  sdkconfig.idf52_backup  sdkconfig.old
source/fwi-receiver-fw/main/: CMakeLists.txt  ESPNow.c  ESPNow.cpp  ESPNow.h  ESPNow.hpp  FWConfig.h  FWConfig.hpp  HWConfig.h  HWGPIO.cpp  HWGPIO.hpp  HardwareGPIO.c  HardwareGPIO.cpp  HardwareGPIO.h  HardwareGPIO.hpp  MainApp.c  MainApp.cpp  MainApp.h  MainApp.hpp  Settings.c  Settings.cpp  Settings.h  Settings.hpp  WebServer.c  idf_component.yml  main.c  main.cpp  main.h  main.hpp
source/fwi-receiver-fw/main/assets/: BitmapPotato.c  BitmapPotato.h  EmbeddedFiles.c  EmbeddedFiles.h  EmbeddedFiles.txt
source/fwi-receiver-fw/main/oledui/: UIAbout.cpp  UIAbout.hpp  UIArmed.c  UIArmed.cpp  UIArmed.h  UIArmed.hpp  UIBase.hpp  UICore.hpp  UIErrorPleaseDisarm.c  UIErrorPleaseDisarm.cpp  UIErrorPleaseDisarm.h  UIErrorPleaseDisarm.hpp  UIHome.c  UIHome.cpp  UIHome.h  UIHome.hpp  UILiveCheckContinuity.cpp  UILiveCheckContinuity.hpp  UIManager.c  UIManager.cpp  UIManager.h  UIManager.hpp  UIMenu.c  UIMenu.cpp  UIMenu.h  UIMenu.hpp  UISetting.c  UISetting.cpp  UISetting.h  UISetting.hpp  UITestConn.c  UITestConn.cpp  UITestConn.h  UITestConn.hpp
source/fwi-receiver-fw/main/remote/: ESPNow.c  ESPNow.h
source/fwi-receiver-fw/main/ui/: UIArmed.c  UIArmed.h  UICore.h  UIErrorPleaseDisarm.c  UIErrorPleaseDisarm.h  UIHome.c  UIHome.h  UIManager.c  UIManager.h  UIMenu.c  UISetting.c  UISetting.h
source/fwi-receiver-fw/main/webserver/: WSWebSocket.c  WSWebSocket.cpp  WSWebSocket.h  WSWebSocket.hpp  WebServer.c  WebServer.cpp  WebServer.hpp
source/fwi-receiver-fw/main/www/: index.html  settings.html
source/fwi-receiver-fw/main/www/css/: content.css
source/fwi-receiver-fw/main/www/js/: app.js  common-app.js  settings-app.js
source/fwi-remote-fw/: CMakeLists.txt  sdkconfig
source/fwi-remote-fw/main/: CMakeLists.txt  FWConfig.h  main.c
source/tools/: embeddedgen.py
